Update DISCORD INVITE index.html

--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
 
     <div class="community-text">Join the growing Faxnu community and stay updated!</div>
 
-    <a class="discord-box" href="https://discord.gg/j9yQa6CU" target="_blank" title="Join our Discord!">
+    <a class="discord-box" href="https://discord.gg/5hWsDBKSvC" target="_blank" title="Join our Discord!">
       <img src="https://cdn-icons-png.flaticon.com/512/5968/5968756.png" alt="Discord Invite">
     </a>
 
